[tool.poetry]
name = "timewar"
version = "0.1.0"
description = ""
authors = ["Daniel Neshyba-Rowe <rowedanielp@gmail.com>", "Penny Rowe <prowe@harbornet.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
matplotlib = "^3.6.2"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
